adding new works

--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
   <body>
     <h1>Namaste JS</h1>
 
-    <button id="clickMe">Click Me</button>
-
+    <!-- <button id="clickMe">Click Me</button> -->
+    <div>
+      <button>Like Me</button>
+    </div>
+    <a href="http://www.google.com" target="_blank">To Google</a>
     <script src="index.js"></script>
     <script src="restSpread.js"></script>
     <script src="async.js"></script>
+    <script src="protoji.js"></script>
+    <script src="useCase.js"></script>
+    <script src="event.js"></script>
+    <script src="memo.js"></script>
   </body>
 </html>
